# trainingsattendance

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  trainingsattendance.sqlite
migrations/2019-08-04-142847_trainingsattendance/: down.sql  up.sql
src/: main.rs  modules.rs  schema.rs
