[package]
name = "trainingsattendance"
version = "0.1.0"
authors = ["ebelleon <ebel.leon@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maud = { version = "0.21", features = ["rocket"] }
rocket = "0.4"
diesel = { version = "1.4", features = ["sqlite"] }
dotenv = "0.14"
